[gd_scene load_steps=4 format=2]

[ext_resource path="res://main/player_script.gd" type="Script" id=1]
[ext_resource path="res://runes/player_rune.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 79.5 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="SideRune" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -80 )

[node name="PivotRune" parent="." instance=ExtResource( 2 )]
pivot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 40, 0 )
shape = SubResource( 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
